Refactor list initialization to use List.copyOf for immutability and improve code clarity